--- a/styles/styles.css
+++ b/styles/styles.css
@@ -7,108 +7,340 @@
 /*-------------
 Common Styles
 ---------------*/
-body{
-    font-family: wWork Sans;
+body {
+  font-family: wWork Sans;
 }
 /*-----------------
  Styles on First Part
 -------------------*/
-.section-1{
-    background-color: rgba(255, 144, 14, 0.10);
-    
-    
-    
+.section-1 {
+  background-color: rgba(255, 144, 14, 0.1);
 }
-.head{
-    display: flex;
-    justify-content: space-between;
+.head {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
 }
-.G3{
-    
-    margin-top: 40px;
-    margin-left: 140px;
-    text-align: center;
-
+.G3 {
+  margin-top: 40px;
+  margin-left: 140px;
+  text-align: center;
 }
-.navbar{
-    display: grid;
-    grid-template-columns: repeat(4, 1fr);
-    grid-column-gap: 20px;
-    margin-top: 43px;
-    margin-right: 140px;
+.navbar {
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  grid-column-gap: 20px;
+  margin-top: 43px;
+  margin-right: 140px;
 }
-.articale-1{
-       margin-top: 80px;
-       text-align: center;
-
+.articale-1 {
+  margin-top: 80px;
+  text-align: center;
 }
-.paragraph{
-    margin-left: 240px;
-    margin-right: 240px;
-    font-size: 16px;
-    text-align: center;
-    
-
+.paragraph {
+  font-size: 16px;
+  text-align: center;
 }
-.button-1{
-   width: 140px;
-   height: 50px;
-   color: aliceblue;
-   background-color: #FF900E;
-   border: 0ch;
-   border-radius: 5px;
-   margin-bottom: 20px;
+.button-1 {
+  width: 140px;
+  height: 50px;
+  color: aliceblue;
+  background-color: #ff900e;
+  border: 0ch;
+  border-radius: 5px;
+  margin-bottom: 20px;
 }
-img{
-    max-width: 100%;
+img {
+  max-width: 100%;
 }
-.bannar-img{
-    margin-left: 140px;
-    margin-right: 140px;
-    padding-bottom: 20px;
-    border-radius: 5px;      
+.bannar-img {
+  margin-left: 140px;
+  margin-right: 140px;
+  padding-bottom: 20px;
+  border-radius: 5px;
 }
 /*----------------------
 styles on features part-2
 -----------------------*/
-.features{
-    display: grid;
-    grid-template-columns: 1fr 1fr;
+.features {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
 }
-.img{
-    width: 300px;
-    height: 300px;
-    margin-top: 40px;
-    margin-left: 180px;
+.img {
+  width: 442px;
+  height: 442px;
+  margin-top: 40px;
+  margin-left: 180px;
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  grid-gap: 1em;
+  border-radius: 3px;
+}
+.Quick-list {
+  margin-top: 90px;
+  margin-right: 50px;
+}
+span {
+  color: #727272;
+  font-weight: 400;
+}
+b {
+  color: #ff900e;
+  font-weight: 700;
+}
+.paragraph-1 {
+  color: #727272;
+  font-size: 16px;
+}
+.button-2 {
+  width: 140px;
+  height: 50px;
+  color: aliceblue;
+  background-color: #ff900e;
+  border: 0ch;
+  border-radius: 5px;
+  margin-bottom: 20px;
+}
+/* Style on part-3 */
+/* Horizontal line beside sentence */
+.heading {
+  position: relative;
+  display: inline;
+}
+.heading::after {
+  content: "";
+  width: 3px;
+  height: 40px;
+  display: block;
+  background-color: #ff900e;
+  position: absolute;
+  left: -6px;
+  top: 5px;
+}
+/* Works on box-shadow */
+.information {
+  color: #727272;
+  font-size: 15px;
+}
+.box-shadow-1 {
+  width: 400px;
+  height: 100px;
+  padding: 15px;
+  background-color: white;
+  box-shadow: 10px 10px 5px whitesmoke;
+  border-radius: 5px;
+  margin-bottom: 30px;
+}
+.box-shadow-2 {
+  width: 400px;
+  height: 100px;
+  padding: 15px;
+  background-color: white;
+  box-shadow: 10px 10px 5px whitesmoke;
+  border-radius: 5px;
+  margin-bottom: 30px;
+}
+.box-shadow-3 {
+  width: 400px;
+  height: 100px;
+  padding: 15px;
+  background-color: white;
+  box-shadow: 10px 10px 5px whitesmoke;
+  border-radius: 5px;
+  margin-bottom: 30px;
+}
+.box-shadow-4 {
+  width: 400px;
+  height: 100px;
+  padding: 15px;
+  background-color: white;
+  box-shadow: 10px 10px 5px whitesmoke;
+  border-radius: 5px;
+  margin-bottom: 30px;
+}
+
+.section-3 {
+  margin-top: 50px;
+  display: flex;
+}
+.features-discription {
+  margin-top: 60px;
+  margin-left: 160px;
+}
+.architect-img {
+  width: 50%;
+  margin-left: 50px;
+  margin-right: 50px;
+}
+.button-3 {
+  width: 242px;
+  height: 150px;
+  color: aliceblue;
+  background-color: #ff900e;
+  border-radius: 5px;
+  margin-top: -220px;
+  margin-left: -100px;
+  border: 0ch;
+}
+.year {
+  font-size: 25px;
+  color: aliceblue;
+}
+/* Styles on some facts part 4*/
+
+.facts {
+  margin-top: 60px;
+  margin-left: 160px;
+}
+.facts-info {
+  color: #727272;
+}
+.icons {
+  display: flex;
+  justify-content: space-around;
+  margin-top: 30px;
+  margin-left: 40px;
+}
+.ribon,
+.projects,
+.customers,
+.email {
+  height: 130px;
+  width: 130px;
+  border: 1px solid hsl(32, 100%, 53%);
+  text-align: center;
+  padding: 20px;
+  border-radius: 5px;
+}
+/* Styles on our purpose last part */
+.spon-heading {
+  text-align: center;
+  margin-top: 85px;
+}
+.spon-info {
+  text-align: center;
+  color: #727272;
+}
+.spon-img {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  margin-top: 90px;
+}
+footer,
+.end {
+  width: 1200px;
+  height: 50px;
+  background-color: #fff4e7;
+  margin-top: 90px;
+  margin-left: 90px;
+  text-align: center;
+  color: #727272;
+  padding-top: 30px;
+}
+/* Mobile Devices */
+@media only screen and (max-width: 687px) {
+    .container-1 {
+      width: 100%;
+    }
+    .head{
+        display: flex;
+        flex-direction: column;
+    }
+    
+    
+    .G3{
+        text-align: center;
+        margin-top: 50px;
+        margin-left: 50px;
+        margin-right: 50px;
+        margin-bottom: -50px;
+    }
+    .navbar{
+        margin-top: none;
+        margin-left:150px;
+        display: flex;
+        flex-direction: column;
+
+
+    }
+    h1{
+        margin-top: -50px;
+        
+    }
+    .paragraph{
+        width: 350px;
+        
+        
+    }
+    .bannar-img{
+        width: 80%;
+        margin-left: 30px;
+    
+        
+        
+    }
+    .features{
+        display: flex;
+        flex-direction: column;
+    }
+    
+    .img{
+        width: 350px;
+        height: 350px;
+        display: grid;
+        grid-template-columns: repeat(2,1fr);
+        margin-left:0cm;
+        margin-bottom: -60px;
+    }
+    .section-3{
+        display: flex;
+        flex-direction: column;
+    }
+    .box-shadow-1, .box-shadow-2, .box-shadow-3, .box-shadow-4{
+        width: 350px;
+        height: 100px;
+        padding: 15px;
+        background-color: white;
+        box-shadow: 10px 10px 5px whitesmoke;
+        border-radius: 5px;
+        margin-bottom: 30px;
+    }
+    
+    .features-discription{
+        margin-left: 0ch;
+        margin-top: -50px;
+    }
+    .architect-img {
+        width: 70%;
+        margin-left: 50px;
+        margin-right: 50px;
+
+
+
+  }
+  .button-3 {
+    width: 180px;
+    height: 80px;
+    
+  }
+  .facts{
+    margin-left: 0ch;
+  }
+  .icons{
     display: grid;
-    grid-template-columns: repeat(2, 1fr);
+    grid-template-columns: repeat(2,1fr);
+    grid-gap: 0.5em;
+    margin: 0px;
+  }
+  .spon-img {
+    display: grid;
+    grid-template-rows: repeat(2,1fr);
     grid-gap: 1em;
-    border-radius: 3px;
+  }
+   footer,.end{
+    width: 100%;
+    margin-left: 0%;
+   }
 }
-.Quick-list{
-    margin-top: 90px;
-    margin-left: 20px;
-
-}
-span{
-    color: #727272;
-    font-weight: 400;
-}
-b{
-    color: #FF900E;
-    font-weight: 700;
-
-}
-.paragraph-1{
-    color: #727272;
-    font-size: 16px;
-}
-.button-2{
-    width: 140px;
-    height: 50px;
-    color: aliceblue;
-    background-color: #FF900E;
-    border: 0ch;
-    border-radius: 5px;
-    margin-bottom: 20px;
-}
+  
